Fixed margin to show calendar buttons on small screens

--- a/app/main.scss
+++ b/app/main.scss
@@ -2,7 +2,7 @@
 
 .dark {
   --bg-color: rgb(26, 26, 46);
-  --bg-color-transparent: rgba(26,26,46,0.5);
+  --bg-color-transparent: rgba(26, 26, 46, 0.5);
   --bg-details: rgb(18, 18, 43);
   --navbar-bg-color: rgba(15, 52, 96, 1);
   --navbar-toggle-color: rgba(15, 52, 96, 0.92);
@@ -29,7 +29,7 @@
 
 .light {
   --bg-color: rgba(235, 235, 235, 1);
-  --bg-color-transparent: rgba(235,235,235,0.5);
+  --bg-color-transparent: rgba(235, 235, 235, 0.5);
   --bg-details: rgb(250, 250, 250);
   --navbar-bg-color: rgb(220, 220, 220);
   --navbar-toggle-color: rgba(220, 220, 220, 0.92);
@@ -67,9 +67,9 @@ body {
   font-family: var(--font-family);
   background-color: var(--bg-color);
   margin: 0;
-  --noirlab-blue: rgb(0,105,169);
-  --noirlab-grey: rgb(110,110,115);
-  --noirlab-red: rgb(238,75,75);
+  --noirlab-blue: rgb(0, 105, 169);
+  --noirlab-grey: rgb(110, 110, 115);
+  --noirlab-red: rgb(238, 75, 75);
   --fc-page-bg-color: var(--bg-color);
 }
 
@@ -83,6 +83,10 @@ body {
   .main {
     overflow-y: auto;
   }
+
+  .calendar .fc .fc-toolbar.fc-header-toolbar {
+    margin-left: 40px;
+  }
 }
 
 .button {
@@ -94,6 +98,7 @@ body {
   background: linear-gradient(transparent, var(--accent-faded));
   transition: color 0.5s, border-color 0.5s;
   cursor: pointer;
+
   &:hover {
     color: var(--accent);
     border-color: var(--accent);
@@ -109,14 +114,16 @@ body {
     }
   }
 
-  > .button-icon {
+  >.button-icon {
     vertical-align: -4px;
     font-size: 1.1rem;
     margin-right: 5px;
   }
 }
 
-.fc-button, .fc-button-primary, .fc-button-primary:not(:disabled) {
+.fc-button,
+.fc-button-primary,
+.fc-button-primary:not(:disabled) {
   padding: 5px 10px;
   border: 1px solid var(--accent-faded);
   border-color: var(--accent-faded) !important;
@@ -126,6 +133,7 @@ body {
   background-color: transparent;
   transition: color 0.5s, border-color 0.5s;
   cursor: pointer;
+
   &:hover {
     color: var(--accent);
     border-color: var(--accent) !important;
